# ui

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  cleanup.sh  cli.py  dev.sh  meta.py  pyproject.toml  requirements.txt  rxconfig.py
.github/: FUNDING.yml
.github/workflows/: deploy.yml  development.yml
assets/: llms.txt
assets/css/: globals.css  themes.css  wrapper.css
buridan_cli/: main.py
buridan_ui/: buridan_ui.py  config.py  export.py
buridan_ui/landing/: hero.py
buridan_ui/start/: buridan.py  changelog.py  charting.py  clientstate.py  dashboard.py  installation.py  introduction.py  theming.py
buridan_ui/static/: indexer.py  meta.py  routes.py  scripts.py
cli/: interactive.py  main.py  utils.py
docs/: EXPORT.md
docs/_components/: badge.md  breadcrumb.md  input_group.md  menu.md  popover.md  text_area.md  typography.md
docs/charts/: area_chart.md  bar_chart.md  doughnut_chart.md  line_chart.md  pie_chart.md  radar_chart.md  scatter_chart.md
docs/components/: accordion.md  avatar.md  badge.md  breadcrumb.md  button.md  card.md  checkbox.md  collapsible.md  context_menu.md  dialog.md  drawer.md  gradient_profile.md  input.md  input_group.md  kbd.md  link.md  menu.md  navigation_menu.md  popover.md  preview_card.md  scroll_area.md  select.md  skeleton.md  slider.md  switch.md  tabs.md  text_area.md  textarea.md  theme_switcher.md  toggle.md  toggle_group.md  tooltip.md  typography.md
docs/getting_started/: buridan.md  changelog.md  charting.md  cli.md  client_state_var.md  (+5 more)
scripts/: generate_markdown.py  generate_themes.py
src/: config.py  config_generator.py  constants.py  export.py  hooks.py  mdparser.py  meta.py  routes.py  src.py  types.py
(+300 files in other folders)
