[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "buridan-ui"
version = "0.7.7-beta"
description = "Buridan UI – The UI Library for Reflex Developers"
authors = [
    { name = "Ahmad Al Hakim", email = "ahmad@reflex.dev" }
]
readme = "README.md"
requires-python = ">=3.11"

# Runtime dependencies (installed for users)
dependencies = [
    "reflex>=0.8.27a0",
    "typer>=0.12.3",
    "buridan-ui>=0.7.5b0",
]

# CLI entrypoint
[project.scripts]
buridan = "cli.main:app"

# Dev / tooling dependencies
[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "black>=25.1.0",
]


[tool.setuptools.packages.find]
where = ["."]
